# drops2

./: .gitignore  LICENSE  Pipfile  README.md  build_and_publish.sh  example_notebook.ipynb  main.py  pyproject.toml  requirements.txt  setup.py
drops2/: __init__.py  auth.py  client.py  coverages.py  sensors.py  stations.py  utils.py
tests/: test_client.py
